frontend/src/static/css/style.scss
/* ... */
.mini-font {
  font-size: .65rem;
  font-weight: normal;
}

.medium-font {
  font-size: .875rem;
  font-weight: normal;
}

.large-font {
  font-size: 1.5rem;
  font-weight: bold;
}

.tab-padding {
  padding: 2rem 1.5rem;
}

.warn {
  color: mui-color('red');

  .summary-charts__title--contribution {
    color: mui-color('black');
  }
}

/** navigation bar **/
header {
  display: flex;
  justify-content: center;
  position: relative;
  z-index: 100;

  .content {
    align-items: center;
    display: flex;
    flex-grow: 1;
    justify-content: space-between;
  }

  .repo,
  .logo {
    margin: 0;
  }
}

#file-upload {
  text-align: center;
}

#app-wrapper {
  display: flex;
  height: 100vh;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 50;

  #tab-resize-guide {
    $tabs-width: 50%;

    background-color: mui-color('black');
    cursor: col-resize;
    display: none;
    height: 100%;
    position: fixed;
    right: $tabs-width;
    width: 2px;
    z-index: 100;
  }

  #summary-wrapper {
    flex-grow: 1;
    height: 100%;
    overflow-y: scroll;
    text-align: center;

    .timestamp-footer {
      color: mui-color('grey', '700');
      margin-bottom: 1em;
      margin-left: 1em;
    }

    .error-message-box {
      background-color: mui-color('red', '100');
      border: .1rem solid mui-color('red', '900');
      border-radius: .25rem;
      color: mui-color('red', '900');
      font-size: .75rem;
      margin-bottom: .9rem;
      padding: .9rem;
      text-align: left;

      &__close-button {
        cursor: pointer;
        float: right;
        font-size: 1.4rem;
        font-weight: bold;
        line-height: .625rem;

        &:hover {
          color: mui-color('white');
        }
      }

      &__message {
        border-bottom: .1rem solid;
        font-weight: bolder;
        padding-bottom: .5rem;
      }

      .icon {
        padding-right: .4rem;
        padding-top: .2rem;
        width: 1rem;
      }

      &__failed-repo {
        &--name {
          font-weight: bolder;
          padding-left: .2rem;
        }

        &--reason {
          padding-left: 3rem;
        }
      }
    }
  }

  #tabs-wrapper {
    $tabs-width: 50%;

    background: mui-color('grey', '200');
    flex: 0 0 $tabs-width;
    overflow-y: scroll;
    position: relative;

    .tab-close {
      cursor: pointer;
      position: fixed;
      top: calc(50vh - 3rem);

      svg {
        background-color: mui-color('white');
        color: mui-color('black');
        padding: 3rem .25rem;
      }
    }

    .tab-content {
      display: flex;

      .tab-panes {
        text-align: left;
        width: 100%;
      }
    }

    #tab-resize {
      background-color: mui-color('black');
      cursor: col-resize;
      height: 100%;
      position: fixed;
      width: 13.250px;
    }
  }
}

/* summary chart */
#summary,
.summary-status {
  text-align: center;
}

.summary-picker {
  align-items: center;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-bottom: 2rem;

  &__section {
    align-items: inherit;
    display: flex;
    flex: 0 1 auto;
    flex-flow: inherit;
    justify-content: inherit;
  }

  &__checkboxes {
    label {
      margin-left: .5rem;
    }

    span {
      margin-left: .25rem;
    }
  }

  .mui-textfield,
  .mui-select {
    margin: .5rem;
    padding-right: 10px;
  }

  label {
    font-size: .75rem;
    overflow-y: hidden;
    text-align: left;
    width: fit-content;
  }

  input,
  select {
    font-size: .75rem;
  }
}

.summary-charts {
  margin-bottom: 3rem;

  &__title {
    align-items: center;
    display: flex;
    font-weight: bold;
    text-align: left;

    &--index {
      background: mui-color('black');
      color: mui-color('white');
      font-size: medium;
      overflow: hidden;
      padding: .1em .25em .1em .25em;
      vertical-align: middle;
    }

    &--repo {
      font-size: medium;
      padding: .5rem;
    }

    &--percentile {
      color: mui-color('grey');
      margin-left: auto;
    }
  }

  &__fileType--breakdown {
    overflow-y: hidden;

    &__legend {
      display: inline;
      float: left;
    }
  }
}

.summary-chart {
  margin-bottom: 1rem;
  overflow: auto;
  position: relative;
  text-align: left;

  &__title {
    align-items: center;
    clear: left;
    display: flex;

    & > * {
      display: inline;
      padding-right: .5rem;
    }

    &--index,
    &--repo {
      font-weight: bold;
    }

    &--index::after {
      content: '.';
      display: inline-block;
    }

    &--repo {
      padding-right: .25rem;
    }

    &--button {
      color: mui-color('grey');
      cursor: pointer;
      text-decoration: none;
    }

    &--percentile {
      color: mui-color('grey');
      margin-left: auto;
    }
  }

  &__ramp {
    position: relative;

    .overlay {
      height: 100%;
      position: absolute;
      top: 0;

      &.show {
        background-color: rgba(mui-color('white'), .5);
        border: 1px dashed mui-color('black');
      }

      &.edge {
        border-right: 1px dashed mui-color('black');
      }
    }
  }

  &__contrib {
    text-align: left;

    &--bar {
      background-color: mui-color('red');
      height: .3rem;
      margin-top: .1rem;
    }

    &--bar--fileType {
      display: inline-block;
      float: left;
      height: .3rem;
      margin-top: .1rem;
      text-align: left;
    }
  }
}
/* ... */

